jmeter/docker/jmeter_grafana_deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter-grafana
  labels:
    app: jmeter-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmeter-grafana
  template:
    metadata:
      labels:
        app: jmeter-grafana
    spec:
      securityContext:
        sysctls:
        - name: net.ipv4.ip_local_port_range
          value: "1024 65500"
      containers:
        - name: grafana
          image: grafana/grafana
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            protocol: TCP
          volumeMounts:
          - name: grafanavol
            mountPath: /var/lib/grafana
      volumes:
      - name: grafanavol
        persistentVolumeClaim:
          claimName: azure-managed-disk

---

apiVersion: v1
kind: Service
metadata:
  name: jmeter-grafana
  labels:
    app: jmeter-grafana
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: jmeter-grafana
