jmeter/docker/jmeter_influxdb_deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-jmeter
  labels:
    app: influxdb-jmeter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb-jmeter
  template:
    metadata:
      labels:
        app: influxdb-jmeter
    spec:
      securityContext:
        sysctls:
        - name: net.ipv4.ip_local_port_range
          value: "1024 65500"
      containers:
        - image: influxdb
          imagePullPolicy: IfNotPresent
          name: influxdb
          volumeMounts:
          - name: config-volume
            mountPath: /etc/influxdb
          - name: azureinflux
            mountPath: /var/lib/influxdb
          ports:
            - containerPort: 8083
              name: influx
            - containerPort: 8086
              name: api
            - containerPort: 2003
              name: graphite
      volumes:
      - name: config-volume
        configMap:
         name: influxdb-config
      - name: azureinflux
        persistentVolumeClaim:
          claimName: influx-storage

---

apiVersion: v1
kind: Service
metadata:
  name: jmeter-influxdb-svc
  labels:
    app: influxdb-jmeter
spec:
   type: ClusterIP
   ports:
    - port: 8083
      name: http
      targetPort: 8083
    - port: 8086
      name: api
      targetPort: 8086
    - port: 2003
      name: graphite
      targetPort: 2003
   selector:
    app: influxdb-jmeter
